Updated Ingress for 1.9.0

--- a/networking/ingress-nginx/ingress.yaml
+++ b/networking/ingress-nginx/ingress.yaml
@@ -43,6 +43,9 @@ metadata:
   name: business-hub-keycloak
   namespace: knime
   annotations:
+    ## redirect to /auth/ if / is called
+    ## ending slash is important, see https://github.com/aerogear/keycloak-metrics-spi/issues/190
+    nginx.ingress.kubernetes.io/app-root: "/auth/"
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     # Set force ssl redirect to true only if TLS is enabled at, or in front of, Nginx.
     #nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
@@ -130,6 +133,16 @@ spec:
                 name: istio-ingressgateway
                 port:
                   number: 443
+    - host: apps.hub.example.com
+      http:
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: istio-ingressgateway
+                port:
+                  number: 443
     - host: ws.hub.example.com
       http:
         paths:
@@ -140,42 +153,3 @@ spec:
                 name: istio-ingressgateway
                 port:
                   number: 443
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: business-hub-execution-webapp
-  namespace: hub
-  annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: HTTP
-    ## Set force ssl redirect to true only if TLS is enabled at, or in front of, Nginx.
-    #nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
-    ## Set proxy buffering values as needed. Recommended default values given here.
-    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
-    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
-    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
-    ## Set proxy body size and timeouts values based on expected workloads.
-    ## Example recommended values given here.
-    nginx.ingress.kubernetes.io/proxy-body-size: '0'
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
-    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
-    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
-spec:
-  ingressClassName: business-hub
-  ## The tls block needs additional configuration if cert-manager or similar
-  ## is used to create and bind certificates in the cluster to specific ingress rules.
-  #tls:
-  #- hosts:
-  #    - apps.hub.example.com
-  #  secretName: <cert-secret-name>
-  rules:
-    - host: apps.hub.example.com
-      http:
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: execution-webapp
-                port:
-                  number: 80
