--- a/security/clusterroles/clusterroles.yaml
+++ b/security/clusterroles/clusterroles.yaml
@@ -1,3 +1,5 @@
+### knime-postgres-operator ClusterRole and ClusterRoleBinding
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -27,3 +29,31 @@ subjects:
 - kind: ServiceAccount
   name: knime-postgres-operator
   namespace: knime
+
+### knime-accounts-service Role and RoleBinging
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: namespace-metadata-reader
+  namespace: kube-system
+rules:
+  - apiGroups: [""]
+    resources:
+      - namespaces
+    verbs:
+      - get
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: system-namespace-uid-reader-rolebinding
+  namespace: kube-system
+roleRef:
+  kind: Role
+  name: namespace-metadata-reader
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+  - kind: ServiceAccount
+    name: license-checker
+    namespace: hub
