--- a/networking/ingress-nginx/ingress.yaml
+++ b/networking/ingress-nginx/ingress.yaml
@@ -23,10 +23,10 @@ spec:
   ## is used to create and bind certificates in the cluster to specific ingress rules.
   #tls:
   #- hosts:
-  #    - storage.hub.example.com
+  #    - storage.balint.cloudops.knime.com
   #  secretName: <cert-secret-name>
   rules:
-    - host: storage.hub.example.com
+    - host: storage.balint.cloudops.knime.com
       http:
         paths:
           - path: /
@@ -65,10 +65,10 @@ spec:
   ## is used to create and bind certificates in the cluster to specific ingress rules.
   #tls:
   #- hosts:
-  #    - auth.hub.example.com
+  #    - auth.balint.cloudops.knime.com
   #  secretName: <cert-secret-name>
   rules:
-    - host: auth.hub.example.com
+    - host: auth.balint.cloudops.knime.com
       http:
         paths:
           - path: /
@@ -104,16 +104,16 @@ spec:
   ## is used to create and bind certificates in the cluster to specific ingress rules.
   #tls:
   #- hosts:
-  #    - hub.example.com
+  #    - balint.cloudops.knime.com
   #  secretName: <cert-secret-name>
   #- hosts:
-  #    - api.hub.example.com
+  #    - api.balint.cloudops.knime.com
   #  secretName: <cert-secret-name>
   #- hosts:
-  #    - ws.hub.example.com
+  #    - ws.balint.cloudops.knime.com
   #  secretName: <cert-secret-name>
   rules:
-    - host: hub.example.com
+    - host: balint.cloudops.knime.com
       http:
         paths:
           - path: /
@@ -123,7 +123,7 @@ spec:
                 name: istio-ingressgateway
                 port:
                   number: 443
-    - host: api.hub.example.com
+    - host: api.balint.cloudops.knime.com
       http:
         paths:
           - path: /
@@ -133,7 +133,7 @@ spec:
                 name: istio-ingressgateway
                 port:
                   number: 443
-    - host: apps.hub.example.com
+    - host: apps.balint.cloudops.knime.com
       http:
         paths:
           - path: /
@@ -143,7 +143,7 @@ spec:
                 name: istio-ingressgateway
                 port:
                   number: 443
-    - host: ws.hub.example.com
+    - host: ws.balint.cloudops.knime.com
       http:
         paths:
           - path: /
