EDGE-1254: Added DNS capture env variables to proxy metadata which resolves some DNS resolution issues in Openshift (Replicated CMX clusters specifically). Also added the access log file parameter to log to stdout.

--- a/networking/istio/istio-config.yaml
+++ b/networking/istio/istio-config.yaml
@@ -41,8 +41,11 @@ spec:
   ## Version tag for docker images e.g. "1.20.3".
   tag: "1.20.3"
   meshConfig:
+    accessLogFile: /dev/stdout
     defaultConfig:
-      proxyMetadata: {}
+      proxyMetadata:
+        ISTIO_META_DNS_CAPTURE: "true"
+        ISTIO_META_DNS_AUTO_ALLOCATE: "true"
     enablePrometheusMerge: true
     extensionProviders:
       - name: "auth-exchanger"
