--- a/networking/ingress-nginx/ingress.yaml
+++ b/networking/ingress-nginx/ingress.yaml
@@ -17,6 +17,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
     nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
     nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
+    haproxy.router.openshift.io/timeout: '1800'
 spec:
   ingressClassName: business-hub
   ## The tls block needs additional configuration if cert-manager or similar
@@ -59,6 +60,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
     nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
     nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
+    haproxy.router.openshift.io/timeout: '1800'
 spec:
   ingressClassName: business-hub
   ## The tls block needs additional configuration if cert-manager or similar
@@ -98,6 +100,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
     nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
     nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
+    haproxy.router.openshift.io/timeout: '1800'
 spec:
   ingressClassName: business-hub
   ## The tls block needs additional configuration if cert-manager or similar
