--- a/security/minimal-rbac/minimal-rbac.yaml
+++ b/security/minimal-rbac/minimal-rbac.yaml
@@ -16,7 +16,7 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["configmaps", "persistentvolumeclaims", "pods", "secrets", "services", "limitranges", "secrets/finalizers", "events", "services/finalizers", ""]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
   - apiGroups: ["autoscaling"]
     resources: ["horizontalpodautoscalers"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
