--- a/networking/istio/istio-config.yaml
+++ b/networking/istio/istio-config.yaml
@@ -66,7 +66,7 @@ spec:
       istio-ingressgateway:
         autoscaleEnabled: true
         name: istio-ingressgateway
-        type: LoadBalancer
+        type: ClusterIP
         podAnnotations:
           {
             proxy.istio.io/config: '{"gatewayTopology":{ "numTrustedProxies": 1}}',
