minimal-rbac.yaml edited online with Bitbucket
refactored minimal rbac rules based on customer observations

--- a/security/minimal-rbac/minimal-rbac.yaml
+++ b/security/minimal-rbac/minimal-rbac.yaml
@@ -15,8 +15,11 @@ metadata:
   name: kotsadm-role
 rules:
   - apiGroups: [""]
-    resources: ["configmaps", "persistentvolumeclaims", "pods", "secrets", "services", "limitranges", "secrets/finalizers", "events", "services/finalizers", ""]
+    resources: ["configmaps", "persistentvolumeclaims", "pods", "secrets", "services", "events"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
+  - apiGroups: [""]
+    resources: ["limitranges", "secrets/finalizers", "services/finalizers"]
+    verbs: ["get", "list", "watch"]
   - apiGroups: ["autoscaling"]
     resources: ["horizontalpodautoscalers"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
@@ -24,7 +27,7 @@ rules:
     resources: ["namespaces"]
     verbs: ["get", "list"]
   - apiGroups: ["apps"]
-    resources: ["daemonsets", "deployments", "statefulsets", "deployments/finalizers"]
+    resources: ["daemonsets", "deployments", "statefulsets"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
   - apiGroups: ["batch"]
     resources: ["jobs", "cronjobs"]
@@ -33,7 +36,7 @@ rules:
     resources: ["ingresses"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
   - apiGroups: [""]
-    resources: ["namespaces", "endpoints", "serviceaccounts"]
+    resources: ["endpoints", "serviceaccounts"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
   - apiGroups: [""]
     resources: ["persistentvolumes"]
@@ -48,14 +51,14 @@ rules:
     resources: ["poddisruptionbudgets"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
   - apiGroups: [""]
-    resources: ["pods/log", "pods/exec"]
+    resources: ["pods/log"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["pods/exec"]
     verbs: ["get", "list", "watch", "create"]
   - apiGroups: ["batch"]
     resources: ["jobs/status"]
     verbs: ["get", "list", "watch"]
-  - apiGroups: ["scheduling.k8s.io"]
-    resources: ["priorityclasses"]
-    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
   - apiGroups: ["acid.zalan.do"]
     resources: ["postgresqls", "operatorconfigurations", "postgresteams", "postgresqls/status"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
