minimal-rbac.yaml edited online with Bitbucket
Updated RBAC to remove additional permissions.

--- a/security/minimal-rbac/minimal-rbac.yaml
+++ b/security/minimal-rbac/minimal-rbac.yaml
@@ -18,7 +18,7 @@ rules:
     resources: ["configmaps", "persistentvolumeclaims", "pods", "secrets", "services", "events"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
   - apiGroups: [""]
-    resources: ["limitranges", "secrets/finalizers", "services/finalizers"]
+    resources: ["limitranges"]
     verbs: ["get", "list", "watch"]
   - apiGroups: ["autoscaling"]
     resources: ["horizontalpodautoscalers"]
@@ -38,9 +38,6 @@ rules:
   - apiGroups: [""]
     resources: ["endpoints", "serviceaccounts"]
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete", "deletecollection"]
-  - apiGroups: [""]
-    resources: ["persistentvolumes"]
-    verbs: ["get", "list"]
   - apiGroups: ["authorization.k8s.io"]
     resources: ["selfsubjectaccessreviews", "selfsubjectrulesreviews"]
     verbs: ["create"]
