Added additional rolebinding subject for secret-store

--- a/security/clusterroles/clusterroles.yaml
+++ b/security/clusterroles/clusterroles.yaml
@@ -57,3 +57,6 @@ subjects:
   - kind: ServiceAccount
     name: license-checker
     namespace: hub
+  - kind: ServiceAccount
+    name: secret-store
+    namespace: hub
