--- a/networking/istio/istio-config.yaml
+++ b/networking/istio/istio-config.yaml
@@ -50,7 +50,7 @@ spec:
     extensionProviders:
       - name: "auth-exchanger"
         envoyExtAuthzHttp:
-          service: "auth-exchanger.hub.svc.cluster.local"
+          service: "auth-exchanger.knime.svc.cluster.local"
           port: "9090"
           includeRequestHeadersInCheck:
             ["authorization", "user-agent", "x-forwarded-for", "cookie"]
@@ -123,14 +123,6 @@ spec:
             memory: 64Mi
         statusPort: 15020
         tracer: zipkin
-    istiod:
-      resources:
-        limits:
-          cpu: 500m
-          memory: 1024Mi
-        requests:
-          cpu: 50m
-          memory: 128Mi
     pilot:
       image: pilot
       nodeSelector: {}
