--- a/networking/istio/istio-config.yaml
+++ b/networking/istio/istio-config.yaml
@@ -28,18 +28,10 @@ spec:
             maxReplicas: 5
     pilot:
       enabled: true
-      k8s:
-        resources:
-          limits:
-            cpu: 2000m
-            memory: 1024Mi
-          requests:
-            cpu: 50m
-            memory: 128Mi
-  ## Root for docker image paths e.g. "docker.io/istio".
-  hub: "docker.io/istio"
-  ## Version tag for docker images e.g. "1.20.3".
-  tag: "1.20.3"
+  ## Root for docker image paths e.g. "gcr.io/istio-release". Using gcr.io since dockerhub introduced stricter rate limits.
+  hub: "gcr.io/istio-release"
+  ## Version tag for docker images e.g. "1.24.2".
+  tag: "1.24.2"
   meshConfig:
     accessLogFile: /dev/stdout
     defaultConfig:
@@ -72,48 +64,9 @@ spec:
             proxy.istio.io/config: '{"gatewayTopology":{ "numTrustedProxies": 1}}',
           }
     global:
-      configValidation: true
-      defaultNodeSelector: {}
-      defaultPodDisruptionBudget:
-        enabled: true
-      defaultResources:
-        requests:
-          cpu: 10m
-      imagePullPolicy: ""
-      imagePullSecrets: []
       istioNamespace: istio-system
-      istiod:
-        enableAnalysis: false
-      jwtPolicy: third-party-jwt
       logAsJson: false
-      logging:
-        level: default:info
-      meshNetworks: {}
-      mountMtlsCerts: false
-      multiCluster:
-        clusterName: ""
-        enabled: false
-      network: ""
-      omitSidecarInjectorConfigMap: false
-      oneNamespace: false
-      operatorManageWebhooks: false
-      pilotCertProvider: istiod
-      priorityClassName: ""
       proxy:
-        autoInject: enabled
-        clusterDomain: cluster.local
-        componentLogLevel: misc:error
-        enableCoreDump: false
-        excludeIPRanges: ""
-        excludeInboundPorts: ""
-        excludeOutboundPorts: ""
-        image: proxyv2
-        includeIPRanges: "*"
-        logLevel: warning
-        privileged: false
-        readinessFailureThreshold: 30
-        readinessInitialDelaySeconds: 1
-        readinessPeriodSeconds: 2
         resources:
           limits:
             cpu: 1000m
@@ -121,16 +74,3 @@ spec:
           requests:
             cpu: 50m
             memory: 64Mi
-        statusPort: 15020
-        tracer: zipkin
-    pilot:
-      image: pilot
-      nodeSelector: {}
-      podAnnotations: {}
-      podLabels: {}
-    telemetry:
-      enabled: true
-      v2:
-        enabled: true
-        prometheus:
-          enabled: true
