--- a/security/clusterroles/clusterroles.yaml
+++ b/security/clusterroles/clusterroles.yaml
@@ -39,7 +39,7 @@ subjects:
   name: knime-postgres-operator
   namespace: knime
 
-### knime-accounts-service Role and RoleBinging
+### Role and RoleBinding used by services for license validation.
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -68,4 +68,16 @@ subjects:
     namespace: knime
   - kind: ServiceAccount
     name: secret-store
+    namespace: knime
+  - kind: ServiceAccount
+    name: catalog-service
+    namespace: knime
+  - kind: ServiceAccount
+    name: accounts-service
+    namespace: knime
+  - kind: ServiceAccount
+    name: rest-interface
+    namespace: knime
+  - kind: ServiceAccount
+    name: search-service
     namespace: knime
