--- a/networking/istio/istio-config.yaml
+++ b/networking/istio/istio-config.yaml
@@ -14,6 +14,7 @@ spec:
         enabled: false
     ingressGateways:
       - name: istio-ingressgateway
+        namespace: knime
         enabled: true
         k8s:
           resources:
